--- a/css/index.css
+++ b/css/index.css
@@ -47,6 +47,10 @@ html, body{
 	color: #339966;	
 }
 
+.m-tips .show a:hover{
+	text-decoration: underline; 
+}
+
 .m-tips .no-tips{
 	height: 12px;
 	float: right;
@@ -131,6 +135,10 @@ html, body{
 	margin-left: 54px;
 }
 
+.m-header .m-menu a:hover{
+	color: #39a030;
+}
+
 .m-header .m-menu .search span{
 	float: right;
 	margin-left:30px;
@@ -145,25 +153,25 @@ html, body{
 	background-color: #f3f3f3;
 }
 
-.g-banner .m-banner{
+.g-banner{
 	position: relative;
 	height: 460px;
-	background: url(../img/banner1.jpg) no-repeat center top;
-	margin:auto;
-	vertical-align: middle;
 }
 
 .g-banner .m-banner .m-controls{
 	position: absolute;
 	bottom: 0;
-	width: 100%;
 	height: 30px;
+
 	background-color: transparent;
-	left: 0; top: 0; right: 0; bottom: 0;
-	margin:auto;
+	/* Absolute position: 水平居中*/
+	width: 100px;
+	left: 50%;
+	margin-left: -50px;
 }
 
 .m-banner .m-controls span{
+	margin: 5px;
 	display: inline-block;
 	width: 10px;
 	height: 10px;
