--- a/css/index.css
+++ b/css/index.css
@@ -132,7 +132,7 @@ html, body{
 }
 
 .m-header .m-menu a{
-	margin-left: 54px;
+	margin-left: 2em;
 }
 
 .m-header .m-menu a:hover{
@@ -141,7 +141,7 @@ html, body{
 
 .m-header .m-menu .search span{
 	float: right;
-	margin-left:30px;
+	margin-left:1em;
 	height: 18px;
 	width: 21px;
 	background: url(../img/search.png) no-repeat 0 0;
@@ -182,9 +182,16 @@ html, body{
 	background: url(../img/dot.png) no-repeat center 0;
 }
 
+.m-banner .banners{
+	width: 100%;
+	height: 460px;
+}
 .m-banner .banners img{
 	z-index: 1;
 	opacity: 0;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 	display: none;
 }
 
@@ -192,6 +199,9 @@ html, body{
 	z-index: 2;
 	opacity: 1;
 	display: block;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
 
 .g-products{
@@ -211,7 +221,7 @@ html, body{
 	display: inline-block;
 	height: 200px;
 	width: 33%;
-	padding:0 10px;
+	padding:0 1em;
 }
 
 .m-products .product .logo{
